# diosk

./: Cargo.toml  README.md
src/: gemini.rs  input.rs  lib.rs  main.rs  state.rs  terminal.rs  worker.rs
src/gemini/: gemtext.rs  status_code.rs  tls.rs
src/input/: edit.rs  readline.rs
src/state/: command.rs  history.rs  input.rs
src/terminal/: colors.rs
