[package]
name = "diosk" # The Dioskouroi
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"
default-run = "diosk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
encoding = "0.2.33"
log = "0.4.14"
mime = "0.3.16"
once_cell = "1.7.2"
rustls = { version = "0.19.1", features = [ "dangerous_configuration" ] }
simple-logging = "2.0.2"
textwrap = "0.13.4"
thiserror = "1.0.24"
url = "2.2.1"
webpki = "0.21.4"
